<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.5</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<groupId>nl.pancompany.unicorn</groupId>
	<artifactId>unicorn-demo-modular</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<packaging>pom</packaging>
	<name>unicorn-demo-modular</name>
	<description>Unicorn Demo: Modular</description>

	<properties>
		<java.version>23</java.version>
		<spring-modulith.version>1.2.5</spring-modulith.version>
		<org.mapstruct.version>1.6.2</org.mapstruct.version>
		<archunit.version>1.3.0</archunit.version>
		<!--
		Latest jmolecules version contains a bug: https://github.com/xmolecules/jmolecules-integrations/issues/279
		and even more versions have problems with (hexagonal) architecture tests: https://github.com/xmolecules/jmolecules-integrations/issues/278
		-->
		<jmolecules.version>2023.1.6</jmolecules.version>
		<argLine/>
	</properties>

	<modules>
		<module>common</module>
		<module>unicorn-application</module>
		<module>magic-application</module>
		<module>unicorn-adapter</module>
		<module>magic-adapter</module>
		<module>main</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.modulith</groupId>
				<artifactId>spring-modulith-bom</artifactId>
				<version>${spring-modulith.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.jmolecules</groupId>
				<artifactId>jmolecules-bom</artifactId>
				<version>${jmolecules.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<annotationProcessorPaths>
						<path>
							<groupId>org.mapstruct</groupId>
							<artifactId>mapstruct-processor</artifactId>
							<version>${org.mapstruct.version}</version>
						</path>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>${lombok.version}</version>
						</path>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok-mapstruct-binding</artifactId>
							<version>0.2.0</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>2.17.1</version>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>
						${argLine}
						-XX:+EnableDynamicAgentLoading
						-Xshare:off
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
				<configuration>
					<argLine>
						${argLine}
						-XX:+EnableDynamicAgentLoading
						-Xshare:off
					</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>no-coverage</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<!-- Define what ${argLine} should look like without coverage -->
				<argLine/>
			</properties>
		</profile>
	</profiles>

	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>

</project>
